# corax-agent

./: .gitignore  README.md  agent.yaml  corax.yaml  main.py  pyproject.toml
corax/: __init__.py  app.py  config.py  health.py  logging.py  paths.py  runtime.py  settings.py  tool_discovery.py  tool_router.py
corax/capabilities/: __init__.py  echo.py
corax/connectors/: __init__.py  terminal.py
corax/gateway/: __init__.py  policy.py  telegram_gateway.py
corax/loader/: __init__.py  capabilities.py  core.py
corax/memory/: __init__.py  none.py
corax/planner/: __init__.py  stub.py
corax/registry/: capabilities.py  connectors.py  memory.py  providers.py
corax/ui/: __init__.py  banner.py  menu.py  screens.py  terminal.py
corax_agent/: _yaml.py  app.py  config.py  logging_setup.py  menu.py  paths.py  runtime.py
corax_agent/registries/: __init__.py  connectors.py  memory.py  providers.py
corax_agent/stubs/: __init__.py  capability_stub.py  connector_stub.py  memory_stub.py  planner_stub.py
corax_agent/tests/: _helpers.py  test_config.py  test_menu.py  test_runtime.py  test_settings.py
corax_agent/ui/: __init__.py  screens.py  terminal.py
docs/: ARCHITECTURE.md  CONFIG.md  EXTENDING.md
prompts/: planner.md  safety.md  system.md
tests/: __init__.py  helpers.py  test_config.py  test_core.py  test_gateway.py  test_menu.py  test_prompts.py  test_runtime.py  test_settings.py  test_tool_discovery.py  test_tool_router.py
